# netdog

./: CMakeLists.txt  README.md  test-commands.txt
include/: cli.h  interpreter.h  options.h
include/client/: client_initializer.h  client_runner.h
include/server/: server_client_runner.h  server_initializer.h  server_runner.h
include/utils/: comm_utils.h  status.h
src/: cli.c  interpreter.c  main.c  options.c
src/client/: client_initializer.c  client_runner.c
src/server/: client_server_runner.c  server_client_runner.c  server_initializer.c  server_runner.c
src/utils/: comm_utils.c
